# AI-ML-PROJECTS

UBER-RIDE-PREDICT/: .gitignore  README.md  app.py  ml_model.ipynb  pyproject.toml  requirements.txt
UBER-RIDE-PREDICT/static/: styles.css
UBER-RIDE-PREDICT/templates/: index.html
