[project]
name = "uber-ride-predict"
version = "1.0.0"
description = "This project is about predicting the price."
authors = [
    {name = "Ganesh E"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
